kubernetes/trip-service/trip-service-deployment.yml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: trip-service-deployment
  namespace: lastmile
  labels:
    app: trip-service
spec:
  replicas: 1
  selector:
    matchLabels:
      app: trip-service
  template:
    metadata:
      labels:
        app: trip-service
    spec:
      containers:
      - name: trip-service
        image: imsonu2030/lastmile-trip-service:latest
        imagePullPolicy: Always
        ports:
        - containerPort: 8000
