kubernetes/trip-service/trip-service-svc.yml
apiVersion: v1
kind: Service
metadata:
  name: trip-service
  namespace: lastmile
spec:
  selector:
    app: trip-service
  ports:
    - protocol: TCP
      port: 8000
      targetPort: 8000
  type: ClusterIP
